fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - nginx-service
  http:
    - fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 10s
      route:
      - destination:
          host: nginx-service
          subset: all
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user"
        #curl --header "x-user: mateus" http://nginx-service:8000
  subsets:
  - name: all
    labels:
      app: nginx
